# databricks4py

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
docs/: index.md
docs/api/: config.md  io.md  metrics.md  quality.md  testing.md  workflow.md
docs/examples/: bronze_to_silver.py  catalog_and_logging.py  custom_metrics_sink.py  delta_tables.py  feature_pipeline.py  filters_and_pipelines.py  migration_check.py  multi_env_config.py  quality_quarantine.py  quickstart.py  scd_type2.py  simple_etl.py  streaming_job.py  streaming_pipeline.py  testing_guide.py  testing_patterns.py
docs/getting-started/: concepts.md  installation.md  quick-start.md
docs/guides/: config.md  delta-operations.md  metrics.md  quality-gates.md  retry.md  schema-evolution.md  streaming.md  testing.md  workflow.md
docs/superpowers/plans/: 2026-03-18-library-redesign.md
docs/superpowers/specs/: 2026-03-18-library-redesign-design.md
src/databricks4py/: __init__.py  catalog.py  linter.py  logging.py  retry.py  secrets.py  spark_session.py  transforms.py  validation.py  workflow.py
src/databricks4py/config/: __init__.py  base.py  unity.py
src/databricks4py/filters/: __init__.py  base.py
src/databricks4py/io/: __init__.py  checkpoint.py  checkpoint_compat.py  dbfs.py  dedup.py  delta.py  maintenance.py  merge.py  streaming.py
src/databricks4py/metrics/: __init__.py  base.py  delta_sink.py  logging_sink.py
src/databricks4py/migrations/: __init__.py  alter.py  runner.py  schema_diff.py  validators.py
src/databricks4py/observability/: __init__.py  _utils.py  batch_context.py  health.py  query_listener.py
src/databricks4py/quality/: __init__.py  base.py  expectations.py  gate.py  profiler.py
src/databricks4py/testing/: __init__.py  assertions.py  builders.py  fixtures.py  mocks.py  temp_table.py
tests/: conftest.py  test_assertions.py  test_batch_context.py  test_builders.py  test_catalog.py  test_checkpoint.py  test_checkpoint_compat.py  test_circuit_breaker.py  test_config.py  test_dbfs.py  test_dedup.py  test_delta.py  test_delta_advanced_integration.py  test_delta_metrics_sink_integration.py  test_delta_restore.py  test_filters.py  test_freshness_expectation.py  test_health.py  test_linter.py  test_logging.py  test_maintenance.py  test_merge.py  test_metrics.py  test_migration_runner.py  test_migration_runner_integration.py  test_migrations.py  test_mocks.py  test_observability_integration.py  test_profiler.py  test_quality.py  test_quality_integration.py  test_query_listener.py  test_retry.py  test_schema_diff.py  test_secrets.py  test_soft_delete.py  test_spark_session.py  test_streaming.py  test_streaming_dlq.py  test_streaming_integration.py  (+8 more)
