[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "databricks4py"
version = "0.1.0"
description = "Spark, Delta Lake, and Databricks utility library for Python"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "kirankbs"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Database",
]
dependencies = [
    "pyspark>=3.4",
    "delta-spark>=2.4",
]

[project.optional-dependencies]
pydantic = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/kirankbs/databricks4py"
Repository = "https://github.com/kirankbs/databricks4py"
Issues = "https://github.com/kirankbs/databricks4py/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: quick tests that may spin up SparkContext",
    "integration: in-depth tests that spin up SparkContext",
    "no_pyspark: fast tests without SparkContext",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
