[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "databricks4py"
version = "0.3.0"
description = "Spark, Delta Lake, and Databricks utility library for Python"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "kirankbs"}
]
keywords = ["spark", "pyspark", "delta-lake", "databricks", "etl", "data-engineering"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Database",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyspark>=3.4,<5",
    "delta-spark>=2.4,<5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<10",
    "pytest-timeout>=2.0,<3",
    "ruff>=0.4,<1",
    "mypy>=1.10,<2",
]

[project.urls]
Homepage = "https://github.com/kirankbs/databricks4py"
Repository = "https://github.com/kirankbs/databricks4py"
Changelog = "https://github.com/kirankbs/databricks4py/blob/main/CHANGELOG.md"
Issues = "https://github.com/kirankbs/databricks4py/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: quick tests that may spin up SparkContext",
    "integration: in-depth tests that spin up SparkContext",
    "no_pyspark: fast tests without SparkContext",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests"]
skips = [
    "B101",  # assert used for preconditions
    "B110",  # try/except/pass in MetricsSink.flush() default no-op
    "B311",  # uuid4() for correlation IDs, not crypto
    "B608",  # Spark SQL f-strings — table names are developer-provided, not user input
]
